<resources>
    <string name="app_name">StockList</string>
    <string name="default_product_name">Null Product</string>
    <string name="increment">+</string>
    <string name="zero">0</string>
    <string name="decrement">-</string>
    <string name="delete">Delete Product</string>
    <string name="new_product">Add New Product</string>
    <string name="sale">Sale</string>
    <string name="product_detail">Product Information</string>
    <string name="product_name">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="reorder">Reorder</string>
    <string name="image_url">Product Picture</string>
    <string name="price">Item Price</string>
    <string name="invalid_input">Invalid input. Ensure all fields are filled out.</string>
    <string name="invalid_image">Invalid image. Please take a photo of the product.</string>
    <string name="item_added">Product added!</string>
    <string name="not_deleted">Product not deleted.</string>
    <string name="delete_prompt_heading">Delete Product</string>
    <string name="transition_prompt_heading">Move Item</string>
    <string name="transition_prompt_body">Move item to: </string>
    <string name="delete_prompt_body">"Are you sure you want to delete this product?"</string>
    <string name="info_text">Your StockList is empty. Click the add button to add an item!</string>
    <string name="new_product_image">Take Product Picture</string>
    <string name="quantity_w_colon">Quantity:</string>
    <string name="units">Units</string>
    <string name="pantry">My Pantry</string>
    <string name="new_item">Add New Item</string>
    <string name="shopping_list">Shopping List</string>
    <string name="past_items">Past Stock</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">"Camera perimssions not granted. Cannot read barcodes or take product pictures"</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="barcode">Barcode</string>
    <string name="barcode_button">Scan Item Barcode</string>
    <string name="list1">List 1</string>
    <string name="list2">List 2</string>
    <string name="list3">List 3</string>
    <string name="list4">List 4</string>
    <string name="move_to_instock">Move to InStock</string>
    <string name="move_to_outstock">Move to OutStock</string>
    <string name="move_to_shopstock">Move to ShopStock</string>
    <string name="action_delete">Delte</string>
    <string name="action_move">Move</string>
    <string name="description">Item Description</string>
    <string name="edit_item">Edit Item</string>
    <string name="invalid_quantity">Quantity is too large. Please select a value within the range -999,999,999 and 999,999,999</string>
    <string name="submit_changes">Submit Changes</string>
    <string name="get_started">Select a list to get started!</string>
    <string name="welcome">Welcome to StockList</string>

</resources>
