<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/detail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/image_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:scaleType="centerCrop"
        android:src="@drawable/default_image" />

    <TextView
        android:id="@+id/product_name_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/default_product_name"
        android:textAppearance="@android:color/primary_text_dark"
        android:textSize="32sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/quantity_w_colon"
            android:textAppearance="@android:color/secondary_text_dark"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/reorder_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/zero"
            android:textAppearance="@android:color/secondary_text_dark"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/units_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:color/secondary_text_dark"
            android:textSize="24sp" />


    </LinearLayout>

    <TextView
        android:id="@+id/description_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:textAppearance="@android:color/tertiary_text_dark"
        android:textSize="24sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/reorder_increment_detail"
            android:layout_width="88dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:text="@string/increment" />

        <Button
            android:id="@+id/reorder_decrement_detail"
            android:layout_width="88dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:text="@string/decrement" />

    </LinearLayout>


</LinearLayout>